# fif

./: .gitignore  README.md
main/: CMakeLists.txt
main/lib/fif/: CMakeLists.txt
main/lib/fif/include/: config.h  data_type.h  fif.h  output_params.h  output_type.h
main/lib/fif/src/: fif.cpp  output_params.cpp
main/src/: fif.cpp
